--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
 
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>r05</version>
-        </dependency>
+           <groupId>com.google.guava</groupId>
+           <artifactId>guava</artifactId>
+           <version>[30.0-jre,)</version>
+         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.encog/encog-core -->
         <dependency>
